# prime_numbers

./: CMakeLists.txt  README.md  main.c  variables.cmake
Bitset/: Bitset.c  CMakeLists.txt
ParametersHandler/: CMakeLists.txt  ParametersHandler.c
SearchPrimeNumbers/: CMakeLists.txt  SearchPrimeNumbers.c
bitset/: CMakeLists.txt  bitset.c
first part, v3.0/: CMakeLists.txt  Makefile  main.c
first part, v3.0/ParametersHandler/: ParametersHandler.c
first part, v3.0/SearchPrimeNumbers/: SearchPrimeNumbers.c
first part, v3.0/include/: SearchPrimeNumbers.h  check_call_parameters.h  search_prime_numbers.h
first part, v3.0/src/check_call_parameters/: check_call_parameters.c
first part, v3.0/src/search_prime_numbers/: search_prime_numbers.c
include/: Bitset.h  ParametersHandler.h  SearchPrimeNumbers.h  bitset.h
